# gnome-session

./: .cvsignore  .gitlab-ci.yml  AUTHORS  ChangeLog  ChangeLog.pre-git  HACKING  MAINTAINERS  Makefile.am  NEWS  README  README.md  acconfig.h  autogen.sh  configure.ac  configure.in  gnome-session.doap  gnome-session.spec.in  meson.build  meson_options.txt  meson_post_install.py
capplet/: Makefile.am  commands.c  commands.h  gsm-app-dialog.c  gsm-app-dialog.h  gsm-properties-dialog.c  gsm-properties-dialog.h  gsp-app-manager.c  gsp-app.c  gsp-app.h  gsp-keyfile.c  gsp-keyfile.h  main.c  ui.c  ui.h
compat/: Makefile.am  README  at-spi-registryd-wrapper.c  at-spi-registryd-wrapper.desktop.in  at-spi-registryd-wrapper.desktop.in.in.in  gnome-keyring-daemon-wrapper.c  gnome-keyring-daemon-wrapper.desktop.in  gnome-keyring-daemon-wrapper.desktop.in.in.in  gnome-settings-daemon-helper.c  gnome-settings-daemon-helper.desktop.in  gnome-settings-daemon-helper.desktop.in.in.in
data/: Makefile.am  README  classic-gnome.session.desktop.in.in  endsessiondialog.service.in  gnome-custom-session.desktop.in  gnome-custom-session.desktop.in.in  gnome-dummy.session.desktop.in.in  gnome-fallback.session.desktop.in.in  gnome-launched-override.scope.conf  gnome-mimeapps.list  gnome-panel.desktop  gnome-portals.conf  gnome-session-basic-services.target  gnome-session-bus.target  gnome-session-cleanup-wayland.service.in  gnome-session-ctl@.service.in  gnome-session-failed.service.in  gnome-session-failed.target  gnome-session-initialized.target  gnome-session-manager.target  gnome-session-manager@.service.in  gnome-session-monitor.service.in  gnome-session-post-shutdown.service.in  gnome-session-pre.target  gnome-session-restart-dbus.service.in  gnome-session-services.target  gnome-session-shutdown.service.in  gnome-session-shutdown.target  gnome-session-signal-init.service.in  gnome-session-signal-phase@.service.in  gnome-session-stable-delete.service.in  gnome-session-stable.service.in  gnome-session-stable.target  gnome-session-stable.timer  gnome-session-wayland.target  gnome-session-wayland@.target  gnome-session-x11-services-ready.target  gnome-session-x11-services.target  gnome-session-x11.target  gnome-session-x11@.target  (+37 more)
data/icons/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/scalable/: Makefile.am
data/icons/symbolic/: Makefile.am
doc/: Makefile.am  gnome-session.xml  meson.build
doc/dbus/: Makefile.am  gnome-session.xml.in  meson.build  spec-to-docbook.xsl
doc/man/: Makefile.am  gnome-session-inhibit.1  gnome-session-inhibit.xml  gnome-session-properties.1  gnome-session-quit.1  gnome-session-quit.xml  gnome-session-save.1  gnome-session-selector.xml  gnome-session.1  gnome-session.xml  gnome-wm.1  meson.build
egg/: Makefile.am  eggdesktopfile.c  eggdesktopfile.h  eggsmclient-libgnomeui.c  eggsmclient-xsmp.c  eggsmclient.c
gnome-2-22/: Makefile.am
gnome-2-22/data/: session-properties.desktop.in.in
gnome-2-22/gnome-session/: ChangeLog  TODO  gnome-wm  gsm-atk.h  gsm-autostart.h  gsm-client-list.c  gsm-client-list.h  gsm-gsd.h  gsm-keyring.h  gsm-marshal.list  gsm-protocol.h  gsm-sound.h  gsm-xrandr.h  ice.h  logout-test.c  manager.h  migrate-trash.c  migrate-trash.h  save.c  save.h  session-properties.h  util.c
gnome-2-22/po/: ChangeLog  LINGUAS  POTFILES.skip  bn.po  da.po  eu.po  gu.po  he.po  hi.po  hr.po  kn.po  nl.po  nn.po  te.po  tr.po  vi.po
gnome-session/: .cvsignore  AUTHORS  ChangeLog  Makefile  Makefile.am  README  TODO  app-autostart.c  app-autostart.h  app-resumed.c  app-resumed.h  app.c  app.h  auth.c  auth.h  client-xsmp.c  client.c  client.h  command.c  command.h  consolekit.c  consolekit.h  dbus-glue.h  dbus.c  dbus.h  default.in  default.session.5.in  default.wm.in  egg-screen-exec.c  exec.c  gconf.c  gconf.h  gdm-log.c  gdm-log.h  gdm-logout-action.c  gdm-signal-handler.c  gdm.c  gdm.h  gnome-libice-check.1  gnome-libice-check.c  (+188 more)
gnome-session/help/: Makefile.am
gnome-session/help/C/: .cvsignore  ChangeLog  Makefile.am  session-C.omf  session.sgml
gnome-session/help/ja/: .cvsignore  Makefile.am  session-ja.omf  session.sgml
man/: .cvsignore  Makefile.am  default.session.5.in  gnome-session-save.1  gnome-session.1.in  gnome-wm.1
omf-install/: Makefile.am
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  ab.po  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  (+83 more)
smproxy/: .cvsignore  ChangeLog  Makefile.am  README.gnome  save.c  smproxy.c  smproxy.h
splash/: Makefile.am  README  gnome-login-sound.c  gnome-login-sound.desktop.in  gnome-logout-sound.sh  gnome-session-splash.c  gnome-session-splash.desktop.in  gnome-session-splash.desktop.in.in.in  splash-window.c  splash-window.h
tools/: Makefile.am  gnome-session-check-accelerated-common.h  gnome-session-check-accelerated-gl-helper.c  gnome-session-check-accelerated-gles-helper.c  gnome-session-check-accelerated-helper.c  gnome-session-check-accelerated.c  gnome-session-config-generator.c  gnome-session-ctl.c  gnome-session-desktop-app-generator.c  gnome-session-inhibit.c  gnome-session-is-accelerated.c  gnome-session-quit.c  gnome-session-save.c  gnome-session-selector.c  meson.build
